--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "slug": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
