--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "slug": "^5.1.0"
