--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
+    "sharp": "^0.29.0",
     "slug": "^5.1.0"
   },
   "devDependencies": {
