--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "nextjs",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.x",
-    "npm": "6.x"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "11.1.0",
+    "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-infinite-scroll-component": "^6.1.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sharp": "^0.29.0",
     "slug": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.2"
   }
 }
