--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.4.0",
+    "date-fns": "^2.19.0",
+    "ioredis": "^4.27.1",
+    "nanoid": "^3.1.22",
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "slug": "^5.1.0"
+    "slug": "^5.1.0",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
