--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cache-posts": "node scripts/cache.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run cache-posts && git add cache/data.js"
+    }
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.4.0",
     "date-fns": "^2.19.0",
+    "gray-matter": "^4.0.3",
+    "husky": "^7.0.2",
     "ioredis": "^4.27.1",
     "nanoid": "^3.1.22",
-    "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
