--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
+    "sharp": "^0.29.2",
     "slug": "^5.1.0",
     "swr": "^0.5.5"
   },
