--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.3",
     "ioredis": "^4.27.1",
+    "markdown-it": "^12.2.0",
     "nanoid": "^3.1.22",
     "next": "11.1.2",
     "next-sitemap": "^1.6.168",
     "node-html-parser": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1",
     "sharp": "^0.29.2",
     "slug": "^5.1.0",
     "swr": "^0.5.5"
