--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "my-app",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,23 +16,19 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.4.0",
-    "date-fns": "^2.19.0",
-    "gray-matter": "^4.0.3",
-    "ioredis": "^4.27.1",
-    "markdown-it": "^12.2.0",
-    "nanoid": "^3.1.22",
-    "next": "11.1.2",
-    "next-sitemap": "^1.6.168",
-    "node-html-parser": "^5.0.0",
+    "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "date-fns": "^2.19.0",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^12.2.0",
+    "next-sitemap": "^1.6.168",
+    "node-html-parser": "^5.0.0",
     "sharp": "^0.29.2",
-    "slug": "^5.1.0",
-    "swr": "^0.5.5"
+    "slug": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "husky": "^7.0.2"
+    "eslint": "7",
+    "eslint-config-next": "12.0.2"
   }
 }
