--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "cache-posts": "node scripts/cache.js",
-    "postbuild": "next-sitemap --config config-sitemap.js"
+    "postbuild": "next-sitemap --config config-sitemap.js",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
